cambios a contacto y index

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -116,6 +116,18 @@
       </div>
     </div>
 
+    <!-- Capacitaciones -->
+<div class="col-md-4 col-sm-6 col-12">
+  <div class="card h-100 shadow-sm">
+    <img src="https://conafovicer.com/images/contenido/iconos/capacitacion.png" class="card-img-top" alt="Capacitaciones">
+    <div class="card-body text-center">
+      <h3>Capacitaciones</h3>
+      <p>Entrenamiento técnico y práctico para operadores y personal de mantenimiento en sistemas de codificación industrial.</p>
+    </div>
+  </div>
+</div>
+
+
   </div>
 </section>
 
@@ -351,7 +363,7 @@
       </div>
     </div>
 
-    <!-- Tarjeta 3 -->
+    <!-- Tarjeta 4 -->
     <div class="col-md-6 col-lg-4 mb-4">
       <div class="card shadow-sm border-0" role="button"
            data-bs-toggle="modal"
