--- a/home/templates/contacto.html
+++ b/home/templates/contacto.html
@@ -9,11 +9,11 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Fuente Poppins -->
+  <!-- Fuente -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-  <!-- CSS personalizado -->
-  <link rel="stylesheet" href="{% static 'css/contacto.css' %}">
+  <!-- CSS unificado -->
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
@@ -35,7 +35,7 @@
       <ul class="navbar-nav ms-auto nav-links">
         <li class="nav-item"><a class="nav-link" href="{% url 'maquinas' %}">Codificadoras/Insumos</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'contacto' %}">Contáctanos</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'quienes_somos' %}">Quiénes Somos</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'quienes_somos' %}">Quiénes Somos</a></li>
       </ul>
     </div>
   </div>
